--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-"name": "Getting Started Example",
+"name": "Swear Jar",
 "version": "1.0",
-"description": "Build an Extension!",
+"description": "Don't swear",
 "permissions": ["activeTab", "declarativeContent", "storage"],
 "options_page": "options.html",
 "background": {
@@ -23,5 +23,5 @@
   "48": "images/get_started48.png",
   "128": "images/get_started128.png"
 },
-"manifest_version": 2
+"manifest_version": 3
 }
