--- a/manifest.json
+++ b/manifest.json
@@ -23,5 +23,9 @@
   "48": "images/get_started48.png",
   "128": "images/get_started128.png"
 },
+
+"web_accessible_resources": [
+   "swearingisbad.html"
+],
 "manifest_version": 3
 }
