--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
 "permissions": ["activeTab", "declarativeContent", "storage", "webRequest", "*://*/*", "notifications"],
 "options_page": "options.html",
 "background": {
-  "scripts": ["background.js"],
+  "scripts": ["background.js", "notif.js"],
   "persistent": true
 },
 "page_action": {
