--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
   "scripts": ["background.js", "notif.js"],
   "persistent": true
 },
-"content_security_policy": "script-src 'self' 'unsafe-inline' https://www.paypalobjects.com 'sha256-LKKg1Vh3S9JSrCl7wK2GqaUPxWT1gn4Fu/CAUdVYJIU='; object-src 'self'",
+"content_security_policy": "script-src 'self' https://www.paypal.com https://www.paypalobjects.com 'sha256-LKKg1Vh3S9JSrCl7wK2GqaUPxWT1gn4Fu/CAUdVYJIU=' 'sha256-QxDd7xFukk2bf+v4KTMQ7sGwi2ic2sczh7zupXZAZQg='; object-src 'self'",
 "page_action": {
   "default_popup": "popup.html",
   "default_icon": {
